tests/invalid/syntax/let_missing_value.fig
// INVALID: let with no value
// Expected parse error: expression required after =
let x =
